--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,183 @@
 @charset "utf-8";
 @import url(font.css);
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-a{
-    color: #333;
-    text-decoration: none;
+a {
+  color: #333;
+  text-decoration: none;
 }
-img{
-    border: 0;
-    vertical-align: middle;
+img {
+  border: 0;
+  vertical-align: middle;
 }
-html{
-    font-size: 16px;
+html {
+  font-size: 16px;
 }
-body{
-    font-family: "Pretendard" , sans-serif ;
-    font-size: 12px;
-    letter-spacing: 0;
-    font-weight: 400;
-    color: #222;
-    word-break: keep-all;
+body {
+  font-family: "Pretendard", sans-serif;
+  font-size: 16px;
+  line-height: 1;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: #222;
+  word-break: keep-all;
+  background-color: aqua;
+  height: 2000px;
+}
+/* 전체 레이아웃 */
+.wrap {
+  position: relative;
+  display: block;
+}
+/* 상단 */
+.header {
+  position: fixed;
+  left: 0;
+  top: 0;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 100%;
+  height: 100px;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0 60px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  z-index: 9999;
+  transition: all 0.5s;
+}
+.header.active{
+  height: 80px;
+  background-color: rgba(255, 255, 255, 1);
+}
+.header.active .logo{
+  background: url("../images/logo.png") no-repeat center;
+  background-size: cover;
+}
+.header.active .gnb a{
+  color:  #222;
+  line-height: 80px;
+}
+.header.active .gnb a span::after{
+  background-color: #222;
+}
+.logo{
+  position: relative;
+  width: 125px;
+  height: 30px;
+  background: url("../images/logo_white.png") no-repeat center;
+  background-size: cover;
+  transition: all 0.5s;
+}
+.nav{
+  display: block;
+}
+.gnb{
+  display: flex;
+}
+.gnb li a{
+display: block;
+line-height: 100px;
+font-size: 17px;
+font-weight: 500;
+color: #fff;
+padding: 0 34px;
+transition: all 0.5s;
+}
+.gnb li a span{
+  position: relative;
+}
+.gnb li a span::after{
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  opacity: 0;
+  background-color: #fff;
+  transition: all 0.5s;
+}
+.gnb li a:hover span::after{
+  width: 100%;
+  opacity: 1;
+}
+/* 모바일 메뉴 */
+/* 햄버거 메뉴 */
+.mbt{
+  display: none;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  width: 30px;
+  height: 22px;
+  background-color: transparent;
+  /* font-size: 0; */
+  border: 0;
+  cursor: pointer;
+
+}
+.mbt span{
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+}
+.mbt span:nth-child(1){
+  top:0;
+  transform-origin: 0 50%;
+  transition: all 0.3s;
+}
+.mbt:hover span:nth-child(1){
+
+  transform: rotate(45deg);
+  
+}
+.mbt span:nth-child(2){
+  top:50%;
+
+}
+.mbt:hover span:nth-child(2){
+ opacity: 0;
+}
+.mbt span:nth-child(3){
+ top: 100%;
+ transform-origin: 0 50%;
+}
+.mbt:hover span:nth-child(3){
+  transform: rotate(-45deg);
+  transition: all 0.3s;
+ }
+ /* 모바일 gnb */
+.nav-mb{
+  position: absolute;
+  left: 100%;
+  top: 70px;
+  width: 100%;
+  height: calc(100vh - 70px);
+  background-color: #fff;
+  opacity: 0;
+  transition: all 0.3s;
+}
+.nav-mb.active{
+  left: 0%;
+  opacity: 1;
+}
+.nav-mb-gnb li{
+  line-height: 67px;
+}
+.nav-mb-gnb li a{
+  display: block;
+  padding: 0 40px;
+  font-size: 24px;
+  color: #222;
+  border-bottom: 1px solid #e5e5e5;
 }
