--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,9 @@ img {
 html {
   font-size: 16px;
 }
+html.active {
+  overflow: hidden;
+}
 body {
   font-family: "Pretendard", sans-serif;
   font-size: 16px;
@@ -25,8 +28,14 @@ body {
   font-weight: 400;
   color: #222;
   word-break: keep-all;
-  background-color: aqua;
-  height: 2000px;
+}
+/* 공통 클래스 */
+.inner {
+  display: block;
+  width: 100%;
+  max-width: 1420px;
+  margin: 0 auto;
+  background-color: rgb(212, 245, 180);
 }
 /* 전체 레이아웃 */
 .wrap {
@@ -51,22 +60,22 @@ body {
   z-index: 9999;
   transition: all 0.5s;
 }
-.header.active{
+.header.active {
   height: 80px;
   background-color: rgba(255, 255, 255, 1);
 }
-.header.active .logo{
+.header.active .logo {
   background: url("../images/logo.png") no-repeat center;
   background-size: cover;
 }
-.header.active .gnb a{
-  color:  #222;
+.header.active .gnb a {
+  color: #222;
   line-height: 80px;
 }
-.header.active .gnb a span::after{
+.header.active .gnb a span::after {
   background-color: #222;
 }
-.logo{
+.logo {
   position: relative;
   width: 125px;
   height: 30px;
@@ -74,25 +83,25 @@ body {
   background-size: cover;
   transition: all 0.5s;
 }
-.nav{
+.nav {
   display: block;
 }
-.gnb{
+.gnb {
   display: flex;
 }
-.gnb li a{
-display: block;
-line-height: 100px;
-font-size: 17px;
-font-weight: 500;
-color: #fff;
-padding: 0 34px;
-transition: all 0.5s;
+.gnb li a {
+  display: block;
+  line-height: 100px;
+  font-size: 17px;
+  font-weight: 500;
+  color: #fff;
+  padding: 0 34px;
+  transition: all 0.5s;
 }
-.gnb li a span{
+.gnb li a span {
   position: relative;
 }
-.gnb li a span::after{
+.gnb li a span::after {
   content: "";
   position: absolute;
   bottom: -5px;
@@ -103,13 +112,13 @@ transition: all 0.5s;
   background-color: #fff;
   transition: all 0.5s;
 }
-.gnb li a:hover span::after{
+.gnb li a:hover span::after {
   width: 100%;
   opacity: 1;
 }
 /* 모바일 메뉴 */
 /* 햄버거 메뉴 */
-.mbt{
+.mbt {
   display: none;
   position: absolute;
   top: 50%;
@@ -120,9 +129,11 @@ transition: all 0.5s;
   /* font-size: 0; */
   border: 0;
   cursor: pointer;
-
 }
-.mbt span{
+.mbt.active span {
+  background-color: #222;
+}
+.mbt span {
   position: absolute;
   left: 0;
   top: 0;
@@ -131,33 +142,30 @@ transition: all 0.5s;
   height: 2px;
   background-color: #fff;
 }
-.mbt span:nth-child(1){
-  top:0;
+.mbt span:nth-child(1) {
+  top: 0;
   transform-origin: 0 50%;
   transition: all 0.3s;
 }
-.mbt:hover span:nth-child(1){
-
+.mbt.ani span:nth-child(1) {
   transform: rotate(45deg);
-  
 }
-.mbt span:nth-child(2){
-  top:50%;
-
+.mbt span:nth-child(2) {
+  top: 50%;
 }
-.mbt:hover span:nth-child(2){
- opacity: 0;
+.mbt.ani span:nth-child(2) {
+  opacity: 0;
 }
-.mbt span:nth-child(3){
- top: 100%;
- transform-origin: 0 50%;
-}
-.mbt:hover span:nth-child(3){
-  transform: rotate(-45deg);
+.mbt span:nth-child(3) {
+  top: 100%;
+  transform-origin: 0 50%;
   transition: all 0.3s;
- }
- /* 모바일 gnb */
-.nav-mb{
+}
+.mbt.ani span:nth-child(3) {
+  transform: rotate(-45deg);
+}
+/* 모바일 gnb */
+.nav-mb {
   position: absolute;
   left: 100%;
   top: 70px;
@@ -167,17 +175,145 @@ transition: all 0.5s;
   opacity: 0;
   transition: all 0.3s;
 }
-.nav-mb.active{
+.nav-mb.active {
   left: 0%;
   opacity: 1;
 }
-.nav-mb-gnb li{
+.nav-mb-gnb li {
   line-height: 67px;
 }
-.nav-mb-gnb li a{
+.nav-mb-gnb li a {
   display: block;
   padding: 0 40px;
   font-size: 24px;
   color: #222;
   border-bottom: 1px solid #e5e5e5;
+}
+/* 비주얼 */
+.visual {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100vh;
+}
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.visual-box {
+  width: 100%;
+  height: 100%;
+}
+.visual-bg-1 {
+  background: url("../images/main_visual_1.jpg") no-repeat center;
+  background-size: cover;
+}
+.visual-bg-2 {
+  background: url("../images/main_visual_2.jpg") no-repeat center;
+  background-size: cover;
+}
+.visual-bg-3 {
+  background: url("../images/main_visual_3.jpg") no-repeat center;
+  background-size: cover;
+}
+.visual-bg-4 {
+  background: url("../images/main_visual_4.jpg") no-repeat center;
+  background-size: cover;
+}
+.visual-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.visual-box .inner h2 {
+  font-size: 74px;
+  color: #fff;
+  line-height: 1.3;
+}
+.visual-box .inner p {
+  opacity: 0.9;
+  margin-top: 10px;
+  font-size: 22px;
+  font-weight: 500;
+  color: #fff;
+}
+.visual-box .inner a {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 220px;
+  height: 65px;
+  /* opacity: 1; */
+  padding: 0 45px 0 50px;
+  /* background-color: aquamarine; */
+  margin-top: 50px;
+  font-size: 17px;
+  color: #fff;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+}
+/* sw-visual컨트롤 */
+.sw-visual-control {
+  display: flex;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  /* background-color: blue; */
+  top: calc(50% - 230px);
+  width: 100%;
+  max-width: 1420px;
+  z-index: 9;
+}
+.sw-visual-control button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 0;
+  border-radius: 50%;
+  font-size: 24px;
+  cursor: pointer;
+  margin-right: 10px;
+  color: #fff;
+}
+.sw-visual-control button i {
+  opacity: 0.5;
+}
+.sw-visual-control button:hover i {
+  opacity: 1;
+}
+/* 서비스 */
+.service {
+  position: relative;
+  display: block;
+  height: 100vh;
+  background-color: beige;
+  min-height: 800px;
+  padding: 180px 0 210px;
+}
+.service .inner {
+  height: 100%;
+}
+.service-title {
+  font-family: "Godo", "notokr";
+  margin-bottom: 30px;
+  font-size: 38px;
+  text-align: center;
+}
+.service-title span {
+  color: #3a68b2;
+}
+.service-wrap {
+  width: calc(100% - 20px * 2);
+  background-color: #3a68b2;
+  display: grid;
+  grid-template-columns: 1fr, 1fr;
+  grid-auto-rows: minmax(100px, auto);
+  gap: 20px;
+}
+.service-box-1 {
+  grid-row: 1/3;
+}
+.service-bg-1 {
 }
