--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,31 +1,138 @@
 @charset "uft-8";
-@media screen and (max-width:1280px){
-    .header{
-        padding: 0 30px;
-    }
-    .logo{
-        width: 150px;
-    }
-    .gnb{
-        margin-right: -26px;
-    }
-    .gnb > li >a{
-        padding: 0 26px;
-    }
+@media screen and (max-width: 1600px) {
+  .sw-business a {
+    padding: 30px;
+  }
 }
-@media screen and (max-width:1024px){
-    .logo{
-        width: 120px;
-    }
-    .header{
-        height: 70px;
-    }
-    .gnb{
-        display: none;
-    }
-    .mbt{
-        display: block;
-        top: 40%;
-    }
-
+@media screen and (max-width: 1440px) {
+  .business a img {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .header {
+    padding: 0 30px;
+  }
+  .logo {
+    width: 150px;
+  }
+  .gnb {
+    margin-right: -26px;
+  }
+  .gnb > li > a {
+    padding: 0 26px;
+  }
+  .about {
+    padding: 60px 0;
+    height: 51.12vw;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .service {
+    height: auto;
+    padding: 100px 0 80px;
+  }
+}
+@media screen and (max-width: 1020px) {
+  .service-title {
+    font-size: 30px;
+  }
+  .service-wrap {
+    grid-template-columns: 1fr;
+  }
+  .service-box-1 {
+    justify-self: center;
+    width: 100%;
+    max-width: 640px;
+    height: 640px;
+  }
+  .service-box-2,
+  .service-box-3 {
+    justify-self: center;
+    width: 100%;
+    max-width: 640px;
+    height: 312px;
+  }
+  .about {
+    height: auto;
+  }
+  .about .inner {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .about-link {
+    margin: auto;
+    margin-bottom: 80px;
+  }
+  .about-title {
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .logo {
+    width: 120px;
+  }
+  .header {
+    height: 70px;
+  }
+  .gnb {
+    display: none;
+  }
+  .mbt {
+    display: block;
+    top: 40%;
+  }
+  .sw-business a {
+    padding: 60px;
+  }
+  .business a h2 {
+    font-size: 24px;
+  }
+  .business a p {
+    font-size: 16px;
+  }
+  .business a img {
+    width: 60%;
+  }
+  .business-modal {
+    display: flex;
+  }
+}
+@media screen and (max-width: 720px) {
+  .service {
+    padding: 60px 0 80px;
+  }
+  .service-box-1 {
+    height: 100vw;
+    max-height: 640px;
+  }
+  .service-box-2,
+  .service-box-3 {
+    height: 48.75vw;
+    max-height: 312px;
+  }
+  .service-wrap a {
+    padding-bottom: 60px;
+  }
+  .no-br {
+    display: block;
+  }
+}
+@media screen and (max-width: 640px) {
+  .sw-business a {
+    padding: 25px 20px;
+  }
+  .sw-business a p {
+    font-size: 15px;
+  }
+  .sw-business a span {
+    height: 40px;
+    line-height: 40px;
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .sw-business a img {
+    width: 65%;
+  }
 }
